migrate the authentication to Neon auth to make it easier to operate

--- a/packages/be-serverless/.env.local
+++ b/packages/be-serverless/.env.local
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://neondb_owner:npg_ySI74xOmpZgd@ep-bold-hall-a19pt070-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-CLERK_API_KEY=sk_test_91rEspXUCrk7UZDNXjHRgiZyFwmaM8em78teNtdjzN
+DATABASE_URL='postgresql://neondb_owner:npg_ySI74xOmpZgd@ep-bold-hall-a19pt070-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require'
+STACK_PROJECT_ID='327c06c2-72b0-404f-934a-0a313a8f1d12'
