--- a/packages/be-auth/package.json
+++ b/packages/be-auth/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@clerk/backend": "^0.38.4",
+    "jose": "^5.9.6",
     "hono": "^4.0.9"
   }
 }
