--- a/packages/be-serverless/wrangler.toml
+++ b/packages/be-serverless/wrangler.toml
@@ -3,3 +3,8 @@ main = "index.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
+# Environment variables for local development should be in .dev.vars file
+# For production, use: wrangler secret put STACK_PROJECT_ID
+#                     wrangler secret put STACK_PROJECT_SECRET
+#                     wrangler secret put DATABASE_URL
+
