--- a/packages/fe/package.json
+++ b/packages/fe/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "pnpm build && wrangler pages deploy out --project-name=self-flow-fe"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -44,6 +45,7 @@
     "lucide-react": "^0.358.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
