fix: fix some ui and deployment issues

--- a/packages/be-serverless/package.json
+++ b/packages/be-serverless/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
+    "deploy": "wrangler deploy --name selfflow-be",
     "deploy:prod": "wrangler deploy --env production"
   },
   "keywords": [],
