--- a/packages/be-serverless/.env.local
+++ b/packages/be-serverless/.env.local
@@ -1,2 +1,3 @@
 DATABASE_URL='postgresql://neondb_owner:npg_ySI74xOmpZgd@ep-bold-hall-a19pt070-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require'
 STACK_PROJECT_ID='327c06c2-72b0-404f-934a-0a313a8f1d12'
+STACK_SECRET_SERVER_KEY='ssk_hma8ym985ycd0dxfm8131qhnm7pdz1hngp4wtdj4tj640'
