--- a/packages/fe/package.json
+++ b/packages/fe/package.json
@@ -10,6 +10,7 @@
     "deploy": "pnpm build && wrangler pages deploy out --project-name=self-flow-fe"
   },
   "dependencies": {
+    "@self-flow/common": "workspace:*",
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -41,15 +42,20 @@
     "@stackframe/react": "^2.8.48",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.358.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.53.0",
+    "react-resizable-panels": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.5"
+    "use-debounce": "^10.0.5",
+    "vaul": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
