--- a/packages/fe/package.json
+++ b/packages/fe/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
+    "dev": "vite",
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview",
     "lint": "eslint",
-    "deploy": "pnpm build && wrangler pages deploy out --project-name=self-flow-fe"
+    "deploy": "pnpm build && wrangler pages deploy dist --project-name=self-flow-fe"
   },
   "dependencies": {
     "@self-flow/common": "workspace:*",
@@ -46,12 +46,12 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.358.0",
-    "next": "15.5.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.0",
+    "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.5",
@@ -63,9 +63,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.4.6"
   }
 }
