--- a/packages/fe/package.json
+++ b/packages/fe/package.json
@@ -10,7 +10,6 @@
     "deploy": "pnpm build && wrangler pages deploy dist --project-name=self-flow-fe"
   },
   "dependencies": {
-    "@self-flow/common": "workspace:*",
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -39,6 +38,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@self-flow/common": "workspace:*",
     "@stackframe/react": "^2.8.48",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -63,6 +63,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9",
     "eslint-plugin-react": "^7.37.2",
